--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   "dependencies": {
     "auth": "^1.2.3",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
+    "html2canvas": "^1.4.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-grid-layout": "^1.5.2",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
-    "remark-gfm": "^4.0.1"
+    "react-rnd": "^10.5.2",
+    "react-router-dom": "^7.6.3",
+    "remark-gfm": "^4.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-grid-layout": "^1.3.5",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
