--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/spinner": "^2.2.19",
+    "@heroui/system": "^2.4.18",
+    "@heroui/theme": "^2.4.17",
     "auth": "^1.2.3",
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.3",
     "html2canvas": "^1.4.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-grid-layout": "^1.5.2",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
