--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.3",
     "html2canvas": "^1.4.1",
+    "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
