updated and added some tools

--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@heroui/spinner": "^2.2.19",
     "@heroui/system": "^2.4.18",
     "@heroui/theme": "^2.4.17",
+    "@module-federation/nextjs-mf": "^8.8.35",
+    "apexcharts": "^5.3.3",
     "auth": "^1.2.3",
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.3",
+    "html-to-image": "^1.11.13",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "react": "^19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
     "react-grid-layout": "^1.5.2",
     "react-icon": "^1.0.0",
@@ -28,6 +33,7 @@
     "react-markdown": "^10.1.0",
     "react-rnd": "^10.5.2",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.1.2",
     "remark-gfm": "^4.0.1",
     "uuid": "^11.1.0"
   },
